# rk3566_monitor

./: .gitignore  CMakeLists.txt  README.md
asset/: readme.md
board_app/rknpu/: smart_terminal
board_app/rknpu/model/: yolov5n.rknn
drivers/: dht11.c  readme.md  sgp30.c  sr501.c
include/: app_config.h  hal_camera.h  hal_display.h  hal_sensor.h  rknn_api.h  service_mqtt.h  service_storage.h  yolov5.h
lib/: libmosquitto.so.1  libssl.so.1.1
src/: main.cpp  postprocess.cc  yolov5.cc
src/hal/: hal_camera.c  hal_display.c  hal_sensor.c
src/service/: service_mqtt.c  service_storage.c
src/utility/: image_drawing.c
test_client/: cmd.txt  readme.md  server.py
